# linux-nitrosense-rust

./: Cargo.toml  README.md  flake.nix  install.sh  linux-nitrosense.desktop  linux-nitrosense.service  shell.nix
.github/: copilot-instructions.md
.github/workflows/: build.yml
src/: client.rs  config.rs  daemon.rs  main.rs  protocol.rs
src/core/: cpu_ctl.rs  device_regs.rs  ec_writer.rs  mod.rs  tdp_ctl.rs
src/ui/: gui.rs
src/utils/: keyboard.rs
