[package]
name = "linux-nitrosense"
version = "0.1.0"
edition = "2021"
description = "Acer NitroSense fan/power/keyboard control for Linux"
repository = "https://github.com/Packss/linux-nitrosense-rust"
license = "MIT"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.5.2"
